# tattoo-booking-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GITHUB_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  RELEASE.md  VERSION  VERSIONING.md  docker-compose.prod.yml  docker-compose.test-postgres.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  quality.yml  release.yml
app/: main.py
app/api/: actions.py  admin.py  auth.py  demo.py  dependencies.py  errors.py  webhooks.py
app/config/: calendar_rules.yml  voice_pack.yml
app/constants/: __init__.py  event_types.py  providers.py  statuses.py
app/copy/: en_GB.yml
app/core/: config.py
app/db/: deps.py  helpers.py  models.py  session.py
app/jobs/: cleanup_system_events.py  sweep_pending_uploads.py
app/middleware/: correlation_id.py  rate_limit.py
app/schemas/: __init__.py  admin.py
app/services/: action_tokens.py  artist_config.py  artist_notifications.py  bundle_guard.py  calendar_rules.py  calendar_service.py  conversation.py  conversation_booking.py  conversation_qualifying.py  estimation_service.py  funnel_metrics_service.py  handover_packet.py  handover_service.py  http_client.py  leads.py  media_upload.py  message_composer.py  messaging.py  metrics.py  outbox_service.py  parse_repair.py  pricing_service.py  questions.py  region_service.py  reminders.py  safety.py  sheets.py  slot_parsing.py  state_machine.py  stripe_service.py  summary.py  system_event_service.py  template_check.py  template_registry.py  text_normalization.py  time_window_collection.py  tone.py  tour_service.py  whatsapp_templates.py  whatsapp_window.py
app/services/conversation/: __init__.py  conversation.py  conversation_booking.py  conversation_deps.py  conversation_policy.py  conversation_qualifying.py  handover_packet.py  summary.py  (+4 more)
app/utils/: datetime_utils.py
docs/: ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_SANITY_CHECK.md  CLIENT_COST_SPECIFICATION_BY_PHASE.md  CONTRACT_GAP_ANALYSIS.md  DEEP_AUDIT_HANDOVER_AND_RELEASE.md  DEPLOYMENT_RENDER.md  DEVELOPMENT_SUMMARY.md  FOLLOW_UP_AUDIT_ANALYSIS.md  MAPPING_OLD_TO_NEW.md  OPS_QUICKSTART.md  PHASE_SUMMARY_AND_COSTS.md  PILOT_WHATSAPP_DEMO_SETUP.md  PRODUCTION_CORRECTNESS_SWEEP.md  PRODUCTION_HARDENING_STATE_AND_RACE.md  README.md  SCHEDULE_C_IMPLEMENTATION_TRACEABILITY.md  SERVICES_REORG_MAPPING.md  SIDE_EFFECT_ORDERING_AND_LAST_MILE_TESTS.md  SPLIT_CONVERSATION_SUMMARY.md  SYSTEM_EVENTS.md  TEST_AND_SCALING_REPORT.md  WHATSAPP_READY.md  WHATSAPP_TESTING_GUIDE.md  demo_script.md  ops_runbook.md
docs/architecture/: ARCHITECTURE_SUMMARY_AND_NEXT_IMPROVEMENTS.md  ARCHITECTURE_VISUALS.md  FILE_ORGANIZATION.md  IMPORT_GRAPH.mmd  STATUS_STRINGS.md
docs/audits/: API_CORE_FUNCTIONS_CODE.md  CONVERSATION_AND_NATURALNESS_REVIEW.md  CONVERSATION_POLICY_EXTRACTION.md  CRITICAL_FIXES_SUMMARY.md  DB_COMMIT_POLICY_AUDIT.md  FAILURE_ISOLATION_ANALYSIS.md  FOLLOW_UP_AUDIT_ANALYSIS.md  PARSER_AND_CORE_FUNCTIONS_REVIEW.md  PARSER_QUALITY_REPORT.md  QUALITY_AUDIT.md  SPLIT_CONVERSATION_REVIEW.md  SPLIT_CONVERSATION_SUMMARY.md
docs/client/: SCHEDULE_C_IMPLEMENTATION_TRACEABILITY.md
docs/deployment/: DEPLOYMENT_RENDER.md  RENDER_WHATSAPP_STEP_BY_STEP.md  WHATSAPP_QUICK_START.md  WHATSAPP_READY.md  WHATSAPP_SETUP.md  WHATSAPP_VERIFICATION_CHECKLIST.md
docs/misc/: DEVELOPMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MULTI_ARTIST_PREP_REPORT.md  MYPY_TRIAGE_PLAN.md  SHIP_READINESS_CHECK.md  cursor_prompt_webhook_error_helper.md
docs/reference/: CORE_FUNCTIONS_CODE.md  CORE_FUNCTION_REVIEW_PLAN.md
docs/runbooks/: OPS_QUICKSTART.md  runbook_go_live.md
docs/testing/: IMAGE_PIPELINE_TEST_RESULTS.md  PERFORMANCE_STRESS_TEST.md  TEST_AND_SCALING_REPORT.md  TEST_CHANGES_AND_SCOPE_ALIGNMENT.md
migrations/: env.py
migrations/versions/: 32e8eb19a3ad_create_leads_table.py  36c4015fcd35_add_estimated_days_field_to_lead_model.py  3e184303342b_add_slot_selection_fields.py  525558e3d746_add_parse_failure_tracking.py  7d8d633017cd_add_pricing_estimate_fields_to_lead_.py  816bbb222204_add_deposit_locking_audit_fields.py  a1b2c3d4e5f6_add_proposal_v1_4_fields.py  a1b2c3d4e5f7_add_system_events_table.py  add_artist_id_to_leads.py  add_attachments_table.py  add_notification_timestamps.py  b1c2d3e4f5a6_add_deposit_checkout_expires_at.py  b452f5bb9ced_add_unique_constraints_and_indexes.py  c2d3e4f5a6b7_add_handover_last_hold_reply_at.py  d5e6f7a8b9c0_add_provider_to_processed_messages.py  eef03f799c01_add_current_step_to_leads_and_create_.py  f4a5b6c7d8e9_add_phase1_fields.py
scripts/: bench_handle_inbound.py  bump-version.ps1  bump-version.sh  check_docker.py  check_imports.py  generate_import_graph.py  load_test_http.py  release.ps1  release.sh  smoke_workers.sh  test-docker.ps1  test.ps1  test_attachment_pipeline.py  test_supabase_storage.py  webhook_replay.py  whatsapp_smoke.py
tests/: README.md  TESTING.md  TESTS_README.md  TEST_IMAGE_EDGE_CASES_README.md  conftest.py  test_abuse_load_hardening.py  test_action_token_security.py  test_action_tokens.py  test_admin.py  test_admin_actions.py  test_admin_auth.py  test_admin_security_production.py  test_adversarial_break.py  test_adversarial_break_extended.py  test_artist_config.py  test_bundle_guard.py  test_calendar_edge_cases.py  test_calendar_rules.py  test_conversation.py  test_conversation_new_features.py  test_conversation_policy.py  test_conversation_split_regressions.py  test_correlation_ids.py  test_debug_endpoint.py  test_demo_mode.py  test_deposit_expires_at.py  test_deposit_locking.py  test_deposit_statuses.py  test_e2e_full_flow.py  test_e2e_phase1_happy_path.py  test_edge_cases.py  test_edge_cases_comprehensive.py  test_feature_flags.py  test_go_live_guardrails.py  test_golden_transcript_phase1.py  test_handover_complications.py  test_handover_packet.py  test_health.py  test_http_timeouts.py  test_idempotency_and_out_of_order.py  (+59 more)
tests/helpers/: golden_transcript.py  stripe_webhook.py
(+27 files in other folders)
