[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tattoo-booking-bot"
version = "0.1.0"
description = "WhatsApp-based tattoo booking bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ASYNC", # flake8-async
    "SIM",  # flake8-simplify
    "PL",   # Pylint
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "PLR0913", # too many arguments (sometimes needed)
    "PLR0912", # too many branches (complex business logic)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]  # Allow magic numbers and asserts in tests
"migrations/*" = ["E501"]  # Migration files can be long
"app/api/*.py" = ["B008"]  # FastAPI Depends() pattern is intentional

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Pragmatic: allow untyped for now, fix incrementally
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "stripe.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
]
