[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tattoo-booking-bot"
version = "0.1.0"
description = "WhatsApp-based tattoo booking bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Tests: ignore unused variables (F841) but still catch real errors (F821 undefined names, etc.)
"tests/**/*.py" = ["F841"]
# Migrations: can be long
"migrations/*" = ["E501"]
# FastAPI: Depends() pattern is intentional
"app/api/*.py" = ["B008"]
"app/main.py" = ["B008"]
# Delayed imports (circular / conditional setup)
"app/services/conversation.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Pragmatic: allow untyped for now, fix incrementally
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "stripe.*",
    "alembic.*",
    "supabase",
    "yaml",
    "pytz",
]
ignore_missing_imports = true

# SQLAlchemy ORM: func.now() and datetime assignment to Mapped[DateTime|None] columns
# triggers assignment errors - the plugin doesn't fully handle these. See:
# https://github.com/sqlalchemy/sqlalchemy/issues/9111
[[tool.mypy.overrides]]
module = [
    "app.services.conversation",
    "app.services.conversation_booking",
    "app.services.conversation_qualifying",
    "app.services.state_machine",
    "app.services.reminders",
    "app.services.calendar_service",
    "app.services.time_window_collection",
    "app.services.parse_repair",
    "app.services.artist_notifications",
    "app.api.admin",
    "app.api.actions",
    "app.api.webhooks",
    "app.services.media_upload",
    "app.services.outbox_service",
    "app.services.action_tokens",
]
disable_error_code = ["assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_mode = "auto"
xfail_strict = true
filterwarnings = [
    "error:coroutine .* was never awaited:RuntimeWarning",
    "ignore:The default datetime adapter is deprecated as of Python 3.12.*:DeprecationWarning",
]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
]
